fix platinum component view on small screens

--- a/src/components/Platinum/Platinum.module.css
+++ b/src/components/Platinum/Platinum.module.css
@@ -70,4 +70,23 @@
         align-self: center;
     }
     }
+
+@media (max-width: 500px) {
+    .platinum__features {
+        gap: 0.5rem;
+    }
+
+    .platinum__feature {
+        justify-content: space-between;
+        text-align: center;
+    }
+
+    .feature__title {
+        text-align: center;
+    }
+    
+    .platinum__img {
+        max-width: 250px;
+    }
+}
   
